# basicchatapp

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: .env.example  README.md  run.py
server/: .env.example  README.md  run.py  ws.py
